# Volleyball_Telegram_Bot

./: .flake8  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: check.yml
src/: create_bot.py  group_rules.txt  main.py  settings.py
src/project/handlers/: basic.py  other.py
src/project/utils/: commands.py
