[tool.poetry]
name = "Volleyball_Telegram_Bot"
version = "0.1.0"
description = "My telegram bot for a volleyball group"
authors = ["AlnurT <alnur.tazhbenov@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.5.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.11.28"
flake8-builtins = "^2.2.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.14.0"
flake8-mutable = "^1.2.0"
flake8-print = "^5.0.0"
flake8-return = "^1.2.0"
pep8-naming = "^0.13.3"
aiogram = "^3.2.0"
environs = "^10.0.0"

[tool.black]
include = '\.pyi?$'
exclude = 'venv'

[tool.isort]
profile = "black"
multi_line_output = 3
skip_gitignore=true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
